--- a/src/output.css
+++ b/src/output.css
@@ -20,6 +20,7 @@
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-900: oklch(21% 0.034 264.665);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
@@ -29,6 +30,9 @@
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-bold: 700;
+    --radius-sm: 0.25rem;
+    --radius-md: 0.375rem;
+    --radius-lg: 0.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -197,8 +201,20 @@
   .table {
     display: table;
   }
+  .h-510 {
+    height: calc(var(--spacing) * 510);
+  }
+  .h-520 {
+    height: calc(var(--spacing) * 520);
+  }
   .h-screen {
     height: 100vh;
+  }
+  .w-510 {
+    width: calc(var(--spacing) * 510);
+  }
+  .w-520 {
+    width: calc(var(--spacing) * 520);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -212,13 +228,35 @@
   .justify-center {
     justify-content: center;
   }
+  .rounded {
+    border-radius: 0.25rem;
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
+  .rounded-md {
+    border-radius: var(--radius-md);
+  }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
   .border-4 {
     border-style: var(--tw-border-style);
     border-width: 4px;
+  }
+  .border-black {
+    border-color: var(--color-black);
+  }
+  .border-gray-200 {
+    border-color: var(--color-gray-200);
   }
   .border-green-300 {
     border-color: var(--color-green-300);
@@ -228,6 +266,9 @@
   }
   .border-green-700 {
     border-color: var(--color-green-700);
+  }
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
